// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Export tests default renderer 1`] = `
<div
  className="Export"
>
  <ForwardRef(WithStyles)
    onClose={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Export"
        id="cboard.components.Settings.Export.export"
        values={Object {}}
      />
    }
  >
    <ForwardRef(WithStyles)>
      <ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)>
          <ForwardRef(WithStyles)
            className="Export__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Export"
                id="cboard.components.Settings.Export.export"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Backup your boards"
                id="cboard.components.Settings.Export.exportSecondary"
                values={
                  Object {
                    "cboardLink": <a
                      href="https://www.cboard.io/help/#HowdoIimportaboardintoCboard"
                    >
                      Cboard
                    </a>,
                    "link": <a
                      href="https://www.openboardformat.org/"
                    >
                      OpenBoard
                    </a>,
                  }
                }
              />
            }
          />
          <ForwardRef(WithStyles)>
            <div
              className="Export__ButtonContainer"
            >
              <ForwardRef(WithStyles)
                color="primary"
                disabled={false}
                id="export-button"
                onClick={[Function]}
              >
                <UNDEFINED />
                <FormattedMessage
                  defaultMessage="Export"
                  id="cboard.components.Settings.Export.export"
                  values={Object {}}
                />
              </ForwardRef(WithStyles)>
              <ForwardRef(WithStyles)
                anchorEl={null}
                id="export-menu"
                onClose={[Function]}
                open={false}
              >
                <ForwardRef(WithStyles)
                  onClick={[Function]}
                >
                  Cboard
                </ForwardRef(WithStyles)>
                <ForwardRef(WithStyles)
                  onClick={[Function]}
                >
                  OpenBoard
                </ForwardRef(WithStyles)>
                <ForwardRef(WithStyles)
                  onClick={[Function]}
                >
                  PDF
                </ForwardRef(WithStyles)>
              </ForwardRef(WithStyles)>
            </div>
          </ForwardRef(WithStyles)>
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
    </ForwardRef(WithStyles)>
  </ForwardRef(WithStyles)>
</div>
`;

exports[`Export tests loading behavior 1`] = `
<div
  className="Export"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Export"
        id="cboard.components.Settings.Export.export"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Export__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Export"
                id="cboard.components.Settings.Export.export"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Backup your boards"
                id="cboard.components.Settings.Export.exportSecondary"
                values={
                  Object {
                    "cboardLink": <a
                      href="https://www.cboard.io/help/#HowdoIimportaboardintoCboard"
                    >
                      Cboard
                    </a>,
                    "link": <a
                      href="https://www.openboardformat.org/"
                    >
                      OpenBoard
                    </a>,
                  }
                }
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <div
              className="Export__ButtonContainer"
            >
              <WithStyles(ForwardRef(Button))
                color="primary"
                disabled={false}
                id="export-button"
                onClick={[Function]}
              >
                <ArrowDropDownIcon />
                <FormattedMessage
                  defaultMessage="Export"
                  id="cboard.components.Settings.Export.export"
                  values={Object {}}
                />
              </WithStyles(ForwardRef(Button))>
              <WithStyles(ForwardRef(Menu))
                anchorEl={null}
                id="export-menu"
                onClose={[Function]}
                open={false}
              >
                <WithStyles(ForwardRef(MenuItem))
                  onClick={[Function]}
                >
                  Cboard
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  onClick={[Function]}
                >
                  OpenBoard
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  onClick={[Function]}
                >
                  PDF
                </WithStyles(ForwardRef(MenuItem))>
              </WithStyles(ForwardRef(Menu))>
            </div>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(FullScreenDialog)>
</div>
`;

exports[`Export tests loading behavior 2`] = `
<div
  className="Export"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Export"
        id="cboard.components.Settings.Export.export"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Export__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Export"
                id="cboard.components.Settings.Export.export"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Backup your boards"
                id="cboard.components.Settings.Export.exportSecondary"
                values={
                  Object {
                    "cboardLink": <a
                      href="https://www.cboard.io/help/#HowdoIimportaboardintoCboard"
                    >
                      Cboard
                    </a>,
                    "link": <a
                      href="https://www.openboardformat.org/"
                    >
                      OpenBoard
                    </a>,
                  }
                }
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <div
              className="Export__ButtonContainer"
            >
              <WithStyles(ForwardRef(Button))
                color="primary"
                disabled={false}
                id="export-button"
                onClick={[Function]}
              >
                <ArrowDropDownIcon />
                <FormattedMessage
                  defaultMessage="Export"
                  id="cboard.components.Settings.Export.export"
                  values={Object {}}
                />
              </WithStyles(ForwardRef(Button))>
              <WithStyles(ForwardRef(Menu))
                anchorEl="someElement"
                id="export-menu"
                onClose={[Function]}
                open={true}
              >
                <WithStyles(ForwardRef(MenuItem))
                  onClick={[Function]}
                >
                  Cboard
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  onClick={[Function]}
                >
                  OpenBoard
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  onClick={[Function]}
                >
                  PDF
                </WithStyles(ForwardRef(MenuItem))>
              </WithStyles(ForwardRef(Menu))>
            </div>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(FullScreenDialog)>
</div>
`;

exports[`Export tests loading behavior 3`] = `
<div
  className="Export"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Export"
        id="cboard.components.Settings.Export.export"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Export__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Export"
                id="cboard.components.Settings.Export.export"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Backup your boards"
                id="cboard.components.Settings.Export.exportSecondary"
                values={
                  Object {
                    "cboardLink": <a
                      href="https://www.cboard.io/help/#HowdoIimportaboardintoCboard"
                    >
                      Cboard
                    </a>,
                    "link": <a
                      href="https://www.openboardformat.org/"
                    >
                      OpenBoard
                    </a>,
                  }
                }
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <div
              className="Export__ButtonContainer"
            >
              <WithStyles(ForwardRef(CircularProgress))
                className="Export__ButtonContainer--spinner"
                size={25}
                thickness={7}
              />
              <WithStyles(ForwardRef(Button))
                color="primary"
                disabled={true}
                id="export-button"
                onClick={[Function]}
              >
                <ArrowDropDownIcon />
                <FormattedMessage
                  defaultMessage="Export"
                  id="cboard.components.Settings.Export.export"
                  values={Object {}}
                />
              </WithStyles(ForwardRef(Button))>
              <WithStyles(ForwardRef(Menu))
                anchorEl={null}
                id="export-menu"
                onClose={[Function]}
                open={false}
              >
                <WithStyles(ForwardRef(MenuItem))
                  onClick={[Function]}
                >
                  Cboard
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  onClick={[Function]}
                >
                  OpenBoard
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  onClick={[Function]}
                >
                  PDF
                </WithStyles(ForwardRef(MenuItem))>
              </WithStyles(ForwardRef(Menu))>
            </div>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(FullScreenDialog)>
</div>
`;

exports[`Export tests menu behavior 1`] = `
<div
  className="Export"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Export"
        id="cboard.components.Settings.Export.export"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Export__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Export"
                id="cboard.components.Settings.Export.export"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Backup your boards"
                id="cboard.components.Settings.Export.exportSecondary"
                values={
                  Object {
                    "cboardLink": <a
                      href="https://www.cboard.io/help/#HowdoIimportaboardintoCboard"
                    >
                      Cboard
                    </a>,
                    "link": <a
                      href="https://www.openboardformat.org/"
                    >
                      OpenBoard
                    </a>,
                  }
                }
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <div
              className="Export__ButtonContainer"
            >
              <WithStyles(ForwardRef(Button))
                color="primary"
                disabled={false}
                id="export-button"
                onClick={[Function]}
              >
                <ArrowDropDownIcon />
                <FormattedMessage
                  defaultMessage="Export"
                  id="cboard.components.Settings.Export.export"
                  values={Object {}}
                />
              </WithStyles(ForwardRef(Button))>
              <WithStyles(ForwardRef(Menu))
                anchorEl={null}
                id="export-menu"
                onClose={[Function]}
                open={false}
              >
                <WithStyles(ForwardRef(MenuItem))
                  onClick={[Function]}
                >
                  Cboard
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  onClick={[Function]}
                >
                  OpenBoard
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  onClick={[Function]}
                >
                  PDF
                </WithStyles(ForwardRef(MenuItem))>
              </WithStyles(ForwardRef(Menu))>
            </div>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(FullScreenDialog)>
</div>
`;

exports[`Export tests menu behavior 2`] = `
<div
  className="Export"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Export"
        id="cboard.components.Settings.Export.export"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(Paper))>
      <WithStyles(ForwardRef(List))>
        <WithStyles(ForwardRef(ListItem))>
          <WithStyles(ForwardRef(ListItemText))
            className="Export__ListItemText"
            primary={
              <FormattedMessage
                defaultMessage="Export"
                id="cboard.components.Settings.Export.export"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="Backup your boards"
                id="cboard.components.Settings.Export.exportSecondary"
                values={
                  Object {
                    "cboardLink": <a
                      href="https://www.cboard.io/help/#HowdoIimportaboardintoCboard"
                    >
                      Cboard
                    </a>,
                    "link": <a
                      href="https://www.openboardformat.org/"
                    >
                      OpenBoard
                    </a>,
                  }
                }
              />
            }
          />
          <WithStyles(ForwardRef(ListItemSecondaryAction))>
            <div
              className="Export__ButtonContainer"
            >
              <WithStyles(ForwardRef(Button))
                color="primary"
                disabled={false}
                id="export-button"
                onClick={[Function]}
              >
                <ArrowDropDownIcon />
                <FormattedMessage
                  defaultMessage="Export"
                  id="cboard.components.Settings.Export.export"
                  values={Object {}}
                />
              </WithStyles(ForwardRef(Button))>
              <WithStyles(ForwardRef(Menu))
                anchorEl="someElement"
                id="export-menu"
                onClose={[Function]}
                open={true}
              >
                <WithStyles(ForwardRef(MenuItem))
                  onClick={[Function]}
                >
                  Cboard
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  onClick={[Function]}
                >
                  OpenBoard
                </WithStyles(ForwardRef(MenuItem))>
                <WithStyles(ForwardRef(MenuItem))
                  onClick={[Function]}
                >
                  PDF
                </WithStyles(ForwardRef(MenuItem))>
              </WithStyles(ForwardRef(Menu))>
            </div>
          </WithStyles(ForwardRef(ListItemSecondaryAction))>
        </WithStyles(ForwardRef(ListItem))>
      </WithStyles(ForwardRef(List))>
    </WithStyles(ForwardRef(Paper))>
  </WithStyles(FullScreenDialog)>
</div>
`;
